[gd_scene load_steps=5 format=3 uid="uid://c6qexg224wfyy"]

[ext_resource type="Texture2D" uid="uid://4pi37xpixlf8" path="res://assets/ui/town/shipyard/ShipYard.png" id="1_44gni"]
[ext_resource type="Texture2D" uid="uid://bqal11e3q3jc" path="res://assets/ui/town/shipyard/BaseUpgradeUI.png" id="2_ixawh"]
[ext_resource type="FontFile" uid="uid://duln27t01nc1q" path="res://assets/fonts/Minecraftia-Regular.ttf" id="3_44gni"]
[ext_resource type="Script" uid="uid://dbq7c1adboyop" path="res://scenes/town/shipyard/menu_background.gd" id="3_ixawh"]

[node name="Shipyard" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundArt" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.701389
anchor_bottom = 1.7013888
offset_left = -1.0
offset_top = 1.0
offset_right = -897.0
offset_bottom = -503.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_44gni")
metadata/_edit_use_anchors_ = true

[node name="MenuBackground" type="TextureRect" parent="CanvasLayer"]
offset_left = 658.0
offset_top = 90.99999
offset_right = 808.0
offset_bottom = 219.0
scale = Vector2(5, 5)
texture = ExtResource("2_ixawh")
script = ExtResource("3_ixawh")

[node name="GoldLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 42.999985
offset_top = 10.800002
offset_right = 82.999985
offset_bottom = 32.8
theme_override_colors/font_color = Color(1, 0.8081555, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 6
text = "GOLD"

[node name="GoldBalance" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -59.000015
offset_top = -53.999996
offset_right = -29.200027
offset_bottom = -22.999996
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.98039216, 0.7764706, 0.34901962, 1)
theme_override_colors/font_outline_color = Color(0.47284538, 0.30912796, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_44gni")
theme_override_font_sizes/font_size = 8
text = "123
"

[node name="SpeedLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 47.16666
offset_top = 28.666666
offset_right = 133.16666
offset_bottom = 50.666664
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "SPEED"

[node name="SpeedPriceLabel2" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 49.40001
offset_top = 38.6
offset_right = 135.40001
offset_bottom = 60.599995
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 0.99607843, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 6
text = "1"

[node name="TurningLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 47.000008
offset_top = 47.000004
offset_right = 109.000015
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "TURNING"

[node name="TurningPriceLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 49.200012
offset_top = 55.6
offset_right = 111.20001
offset_bottom = 77.59999
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 0.99607843, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 6
text = "1"

[node name="HullLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 46.666664
offset_top = 63.666664
offset_right = 102.666664
offset_bottom = 85.66666
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "hull"

[node name="HullPriceLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 48.800003
offset_top = 73.0
offset_right = 104.8
offset_bottom = 94.99999
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 0.99607843, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 6
text = "1
"

[node name="GunsLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 46.599987
offset_top = 80.83333
offset_right = 86.59998
offset_bottom = 102.83333
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "GUNS"

[node name="GunsPriceLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 49.4
offset_top = 89.8
offset_right = 89.399994
offset_bottom = 111.8
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 0.99607843, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 6
text = "1"

[node name="RepairLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 83.399994
offset_top = 111.6
offset_right = 169.4
offset_bottom = 133.59999
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "FIX"

[node name="ExitLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 55.40001
offset_top = 112.2
offset_right = 141.4
offset_bottom = 137.2
scale = Vector2(0.5, 0.5)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 8
text = "EXIT"
